@@ -10,6 +10,8 @@ plugins {
     id "net.ltgt.errorprone" version "1.1.1"
     // https://plugins.gradle.org/plugin/org.ajoberstar.grgit
     id 'org.ajoberstar.grgit' version '4.0.0' apply false
+    // https://github.com/n0mer/gradle-git-properties
+    id "com.gorylenko.gradle-git-properties" version "2.2.0"
 }
 apply plugin: "de.undercouch.download"
 
@@ -18,6 +20,10 @@ import org.ajoberstar.grgit.Grgit
 repositories {
     jcenter()
     mavenCentral()
+}
+
+gitProperties {
+    gitPropertiesResourceDir = "${project.rootDir}/checker/src/main/resources"
 }
 
 ext {
